[package]
name = "rust-liveview"
version = "0.1.0"
license = "MIT"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "rust-liveview-codegen",
    "rust-liveview-util",
    "rust-liveview-rpc",
    "rust-liveview-view"
]

[dependencies]
rust-liveview-codegen = { path = "./rust-liveview-codegen" }
rust-liveview-util = { path = "./rust-liveview-util" }
rust-liveview-rpc = { path = "./rust-liveview-rpc" }
rust-liveview-view = { path = "./rust-liveview-view" }

[dev-dependencies]
futures = "0.3.1"
async-std = { version = "1.4.0", features = ["unstable"] }
fluid = "0.4"
trybuild = "1.0.20"
