[package]
name = "rust-liveview"
version = "0.1.0"
license = "MIT"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "rust-liveview-codegen",
    "rust-liveview-common",
    "rust-liveview-rpc",
    "rust-liveview-view"
]

[dependencies]
rust-liveview-codegen = { path = "./rust-liveview-codegen" }
rust-liveview-common = { path = "./rust-liveview-common" }
rust-liveview-rpc = { path = "./rust-liveview-rpc" }
rust-liveview-view = { path = "./rust-liveview-view" }

[dev-dependencies]
async-std = { version = "1.4.0", features = ["unstable"] }
fluid = "0.4"
trybuild = "1.0.20"
