[package]
name = "rust-liveview"
version = "0.1.0"
license = "MIT"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "rust-liveview-codegen",
    "rust-liveview-common",
    "rust-liveview-runtime",
    "rust-liveview-view"
]

[dependencies]
rust-liveview-common = { path = "./rust-liveview-common" }
rust-liveview-runtime = { path = "./rust-liveview-runtime" }
rust-liveview-view = { path = "./rust-liveview-view" }

[dev-dependencies]
fluid = "0.4"
trybuild = "1.0.21"

[dev-dependencies.rust-liveview-runtime]
path = "./rust-liveview-runtime"
features = [
    "async-std-runtime",
    "tokio-runtime",
]

[dev-dependencies.async-std]
version = "1.4.0"

[dev-dependencies.tokio]
version = "0.2.11"

