[package]
name = "rust-liveview-codegen"
version = "0.1.0"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.13", features = ["extra-traits", "full", "parsing", "printing"] }
quote = "1.0.2"
proc-macro2 = { version = "1.0.7", features = ["span-locations"] }
proc-macro-error = "0.4.4"
proc-macro-hack = "0.5.11"
rust-liveview-util = { path = "../rust-liveview-util" }
darling = { version = "0.10.2", features = ["diagnostics", "suggestions"] }
