[package]
name = "rust-liveview-codegen"
version = "0.1.0"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.14", features = ["extra-traits", "full", "parsing", "printing"] }
quote = "1.0.2"
proc-macro2 = { version = "1.0.8", features = ["span-locations"] }
proc-macro-error = "0.4.5"
proc-macro-hack = "0.5.11"
rust-liveview-common = { path = "../rust-liveview-common" }
darling = { version = "0.10.2", features = ["diagnostics", "suggestions"] }
