[package]
name = "rust-liveview-codegen"
version = "0.1.0"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[features]
default = []
common = []
runtime = ["common"]
view = ["common"]

[dependencies]
quote = "1.0.2"
proc-macro-error = "0.4.8"
proc-macro-hack = "0.5.11"
rust-liveview-common = { path = "../rust-liveview-common" }


[dependencies.darling]
version = "0.10.2"
features = [
    "diagnostics", 
    "suggestions"
]

[dependencies.syn]
version = "1.0.14"
features = [
    "extra-traits",
    "full", 
    "parsing", 
    "printing"
]

[dependencies.proc-macro2]
version = "1.0.8"
features = ["span-locations"]