[package]
name = "rust-liveview-common"
version = "0.1.0"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.99.2"
Inflector = "0.11.4"
thiserror = "1.0.9"
language-tags = "0.2.2"
http = "0.2.0"
mime = "0.3.16"
strum = "0.17.1"
strum_macros = "0.17.1"
mime_guess = "2.0.1"
derive_builder = "0.9.0"
bytes = "0.5.4"
regex = "1.3.3"
pin-project = "0.4.7"
pin-utils = "0.1.0-alpha.4"
derive-new = "0.5.8"
once_cell = "1.3.1"
