[package]
name = "rust-liveview-rpc"
version = "0.1.0"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"


[dependencies]
serde = { version = "1.0.104", features = ['derive'] }
rust-liveview-common = { path = "../rust-liveview-common" }
config = {version ="0.10.1", default-features = false, features = ["toml", "json"]}
tower-service = "0.3.0"
