[package]
name = "rust-liveview-runtime"
version = "0.1.0"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"


[dependencies]
rust-liveview-codegen = { path = "../rust-liveview-codegen", features = ["runtime"] }
rust-liveview-common = { path = "../rust-liveview-common" }