[package]
name = "rust-liveview-runtime"
version = "0.1.0"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"

[features]
default = []
tls = [
    "async-tls",
    "rustls",
    "webpki",
    "webpki-roots"
]
async-std-runtime = [
    "async-std",
    "async-tungstenite/async-std-runtime",
    "tls",
]

[dependencies]
rust-liveview-common = { path = "../rust-liveview-common" }


[dependencies.rust-liveview-codegen]
path = "../rust-liveview-codegen"
features = ["runtime"]

[dependencies.async-std]
version = "1.5.0"
features = ["unstable"]
optional = true

[dependencies.async-tls]
version = "0.6.0"
optional = true

[dependencies.async-tungstenite]
version = "0.4.0"
features = ["async-tls"]
optional = true

[dependencies.rustls]
version = "0.16.0"
optional = true

[dependencies.webpki] 
version = "0.21.2"
optional = true

[dependencies.webpki-roots] 
version = "0.19.0"
optional = true