[package]
name = "rust-liveview-server"
version = "0.1.0"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"


[dependencies]
async-std = { version = "1.4.0", features = ["unstable"] }
async-tungstenite = "0.3.1"
futures = "0.3.1"
serde = { version = "1.0.104", features = ['derive'] }
rust-liveview-util = { path = "../rust-liveview-util" }