[package]
name = "rust-liveview-view"
version = "0.1.0"
authors = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
edition = "2018"

[dependencies]
rust-liveview-codegen = { path = "../rust-liveview-codegen" }
rust-liveview-util = { path = "../rust-liveview-util" }
v_htmlescape = "0.4.5"

[dev-dependencies]
fluid = "0.4"
